<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <RelativeLayout
        android:id="@+id/main_layout_top"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/main_title_background" >
	
        <TextView
            android:id="@+id/main_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/sms_title"
            android:textColor="@color/color_white"
            android:textSize="20sp"
            android:textStyle="bold" />
        
        <Button
            android:id="@+id/btnbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dimen_15dip"
			android:gravity="center"
            android:visibility="gone"
            android:background="@drawable/actionbar_plus_icon" />

        <TextView
            android:id="@+id/main_login_state"
            android:textSize="@dimen/font_size_normal"
            android:visibility="invisible"
            android:layout_marginRight="@dimen/dimen_15dip"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:textColor="@color/color_white"
            android:clickable="true"
            android:text="@string/setting_log_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
	</RelativeLayout>
    <View
        android:id="@+id/layout_top_divider"
    	android:layout_below="@id/main_layout_top"
        android:layout_width="fill_parent"
        android:layout_height="1dip"
        android:background="@color/main_top_divider" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="62dip"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:id="@+id/layout_bottom"
    	android:background="@color/main_tabbar_background"
    	android:orientation="horizontal" >
        <TextView
            android:id="@+id/main_home"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="3dip"
            android:gravity="center_horizontal"
            android:text="@string/main_home"
            android:textColor="@color/color_grey"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/main_wifiKey"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="3dip"
            android:gravity="center_horizontal"
            android:text="@string/wifi_key"
            android:textColor="@color/color_grey"
            android:textSize="12sp" />
                
        <TextView
            android:id="@+id/main_microsd"
            android:visibility="gone"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="3dip"
            android:gravity="center_horizontal"
            android:text="@string/main_sdsharing"
            android:textColor="@color/color_grey"
            android:textSize="12sp" />
        
        <RelativeLayout
            android:id="@+id/tab_sms_layout"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true" >

            <TextView
	            android:id="@+id/main_sms"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_centerInParent="true"
	            android:drawablePadding="3dip"
	            android:gravity="center_horizontal"
	            android:text="@string/main_sms"
	            android:textColor="@color/color_grey"
	            android:textSize="12sp" />

            <TextView
	            android:id="@+id/new_sms_count"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_toRightOf="@id/main_sms"
	            android:gravity="center_horizontal"
	            android:layout_marginTop="3dip"
	            android:text="@string/main_sms"
	            android:textColor="@color/color_white"
	            android:textSize="12sp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/main_setting"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:drawablePadding="3dip"
            android:gravity="center_horizontal"
            android:text="@string/main_setting"
            android:textColor="@color/color_grey"
            android:textSize="12sp" />
    	</LinearLayout>
    	<View
        	android:id="@+id/layout_bottom_divider"
        	android:layout_above="@id/layout_bottom"
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/main_bottom_divider" />
	   	<ViewFlipper
	       android:id="@+id/viewFlipper"
	       android:layout_width="fill_parent"
	       android:layout_height="fill_parent"
	       android:layout_above="@id/layout_bottom_divider"
	       android:layout_below="@id/layout_top_divider" >
	   	</ViewFlipper>   
</RelativeLayout>