<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dip"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_bg" >

    <LinearLayout
        android:id="@+id/ID_PUK_TOP_LAYOUT"
        android:layout_width="fill_parent"
        android:layout_height="45dip"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >
            
            <TextView
                android:id="@+id/puk_view_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/puk_title"
                android:paddingLeft="8dip"
                android:textSize="13sp"
                android:textStyle="bold" 
                android:textColor="@color/color_black"/>
        </RelativeLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dip"
            android:background="@color/color_divider" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ID_PUK_CODE_LAYOUT"
        android:layout_width="fill_parent"
        android:layout_height="165dip"
        android:layout_below="@id/ID_PUK_TOP_LAYOUT"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/puk_code_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/puk_code_label" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/puk_code_edit"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_marginLeft="42dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="15dip"
            android:layout_toRightOf="@id/puk_code_tv"
            android:background="@drawable/selector_edit_bg"
            android:inputType="numberPassword"
            android:imeOptions="flagNoExtractUi"
            android:maxLength="8" />

        <TextView
            android:id="@+id/puk_remained_times"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/puk_code_edit"
            android:layout_marginLeft="42dip"
            android:layout_marginTop="5dip"
            android:layout_toRightOf="@id/puk_code_tv"
            android:text="@string/puk_remain_three_times"
            android:textColor="@color/error_font_color"
            android:textSize="13sp" />

        <TextView
            android:id="@+id/new_pin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/puk_code_tv"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="35dip"
            android:text="@string/puk_new_pin_label" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/new_pin_edit"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_below="@id/puk_code_edit"
            android:layout_marginLeft="42dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="30dip"
            android:layout_toRightOf="@id/puk_code_tv"
            android:background="@drawable/selector_edit_bg"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberPassword"
            android:maxLength="8" />

        <TextView
            android:id="@+id/confirm_pin_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/new_pin_tv"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="30dip"
            android:text="@string/puk_confirm_pin_label" 
            android:textColor="@color/color_black"/>

        <EditText
            android:id="@+id/confirm_pin_edit"
            android:layout_width="match_parent"
            android:layout_height="30dip"
            android:layout_below="@id/new_pin_edit"
            android:layout_marginLeft="42dip"
            android:layout_marginRight="20dip"
            android:layout_marginTop="20dip"
            android:layout_toRightOf="@id/puk_code_tv"
            android:background="@drawable/selector_edit_bg"
            android:imeOptions="flagNoExtractUi"
            android:inputType="numberPassword"
            android:maxLength="8" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="60dip"
        android:layout_below="@id/ID_PUK_CODE_LAYOUT"
        android:layout_centerHorizontal="true" 
        android:orientation="horizontal" >
        
        <TextView 
	        android:id="@+id/txtHide" 
	        android:layout_width="25dip" 
	        android:layout_height="1dip"  
           	android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/puk_apply_btn"
            android:layout_width="83dip"
            android:layout_height="30dip"
            android:gravity="center"
			android:layout_toLeftOf="@id/txtHide" 
			android:layout_centerVertical="true"
            android:background="@drawable/selector_common_button"
            android:text="@string/apply"
            android:textColor="@drawable/common_button_text" />
        
        <Button
            android:id="@+id/puk_close_btn"
            android:layout_width="80dip"
		    android:layout_height="30dip"
	        android:layout_toRightOf="@id/txtHide" 
	        android:layout_centerVertical="true"
	        android:background="@drawable/selector_common_button"
	        android:text="@string/cancel"
	        android:textColor="@drawable/common_button_text" />
    </RelativeLayout>

</RelativeLayout>