<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_normal">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_200dip">

        <TextView
            android:id="@+id/get_connected"
            android:layout_marginTop="@dimen/dimen_30dip"
            android:layout_centerHorizontal="true"
            android:textColor="@color/color_black"
            android:text="@string/refresh_get_connected"
            android:textSize="@dimen/font_size_normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/get_connected_tips"
            android:textColor="@color/deep_grey_text"
            android:layout_marginTop="@dimen/dimen_20dip"
            android:layout_below="@id/get_connected"
            android:layout_marginLeft="@dimen/dimen_40dip"
            android:layout_marginRight="@dimen/dimen_40dip"
            android:textSize="@dimen/font_size_normal"
            android:gravity="center"
            android:text="@string/refresh_manage_device_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <ImageView
            android:id="@+id/get_connected_line"
            android:layout_marginTop="@dimen/dimen_20dip"
            android:layout_below="@id/get_connected_tips"
            android:background="@color/grey_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_0.5dip"/>
        <RelativeLayout
            android:layout_below="@id/get_connected_line"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/get_connected_ok_btn"
                android:clickable="true"
                android:text="@string/ok"
                android:gravity="center"
                android:textSize="@dimen/font_size_normal"
                android:layout_centerInParent="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/mg_blue"
                android:layout_width="@dimen/dimen_50dip"
                android:layout_height="match_parent"/>
        </RelativeLayout>

    </RelativeLayout>

</RelativeLayout>