<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageButton
        android:id="@+id/ib_title_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_10dip"
        android:background="@color/color_transparent"
        android:contentDescription="@string/back"
        android:src="@drawable/back" />

    <TextView
        android:id="@+id/tv_title_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/dimen_2dip"
        android:layout_toRightOf="@id/ib_title_back"
        android:gravity="center"
        android:text="@string/back"
        android:textColor="@color/color_transparent"
        android:textSize="@dimen/font_size_normal" />
    <FrameLayout
        android:id="@+id/fl_edit_or_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/dimen_10dip"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_titlebar_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_titlebar_text_edit"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size_normal" />
        
        <TextView
            android:id="@+id/tv_titlebar_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/setting_titlebar_text_done"
            android:textColor="@color/color_white"
            android:textSize="@dimen/font_size_normal"
            android:visibility="gone" />
    </FrameLayout>
    
    <LinearLayout
        android:id="@+id/fl_add_and_delete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/dimen_10dip"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/tv_titlebar_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:background="@drawable/actionbar_plus_icon"
            android:text="        " />
        
        <TextView
            android:id="@+id/tv_titlebar_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="        " 
            android:background="@drawable/btn_delete"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tv_title_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:paddingLeft="@dimen/dimen_20dip"
        android:gravity="center"
        android:text="@string/setting_wifi"
        android:textColor="@color/color_white"
        android:textSize="@dimen/font_size_normal"/>
    
</RelativeLayout>